--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/polyfill": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-react": "^7.0.0-beta.51",
+    "@svgr/webpack": "^5.4.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
