--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src --ext .js,.jsx --fix"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connected-react-router": "^6.8.0",
@@ -65,7 +66,7 @@
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
-    "react-hot-loader": "^4.12.20",
+    "react-hot-loader": "^4.12.21",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
