--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "reduxsauce": "^1.1.2"
+    "reduxsauce": "^1.1.2",
+    "react-hot-loader": "^4.12.21"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
@@ -66,7 +67,6 @@
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
-    "react-hot-loader": "^4.12.21",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
