--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,21 @@
 {
-    "parser": "babel-eslint",
-    "extends": ["airbnb", "prettier", "prettier/react"],
-    "plugins": ["prettier"],
-    "env": {
-        "browser" : true
-    },
-    "settings": {
-        "import/resolver":  {
-             "webpack":  {
-                 "config" : "config/webpack.base.config.js"
-             }
-         }        
-    },
-    "rules" : {
-        "prettier/prettier": "error",
-        "react/jsx-props-no-spreading": ["error", {"custom": "ignore"}] 
+  "parser": "babel-eslint",
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["prettier", "react-hooks"],
+  "env": {
+    "browser": true
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "config/webpack.base.config.js"
+      }
     }
+  },
+  "rules": {
+    "prettier/prettier": "error",
+    "react/jsx-props-no-spreading": ["error", { "custom": "ignore" }],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  }
 }
