--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -29,7 +30,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.2",
-    "react-hot-loader": "^4.12.21"
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
