--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "prettier/prettier": "error",
     "react/jsx-props-no-spreading": ["error", { "custom": "ignore" }],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/exhaustive-deps": "warn",
     "react/forbid-prop-types": "off"
   }
 }
