add user component

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,9 @@
     "react/jsx-props-no-spreading": ["error", { "custom": "ignore" }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    "no-console": "off",
+    "consistent-return": "off",
+    "react/prop-types": "off"
   }
 }
