--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "history": "^4.10.1",
     "immer": "^6.0.5",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -26,11 +27,13 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.2",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
@@ -65,7 +68,6 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.6",
     "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "sass-loader": "^7.0.3",
