--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/forbid-prop-types": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-console": "off",
+    "react/no-danger": "off"
   }
 }
