--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.21",
+    "react-icons": "^4.3.1",
+    "react-modal-overlay": "^1.0.3",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -33,7 +35,8 @@
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.2",
     "reselect": "^4.0.0",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
