--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "express": "^4.17.1",
     "history": "^4.10.1",
     "immer": "^6.0.5",
+    "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
+    "ol": "^6.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.21",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-modal-overlay": "^1.0.3",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
